@@ -14,7 +14,7 @@ require_once JPATH_SITE.'/components/com_content/helpers/route.php';
 
 jimport('joomla.application.component.model');
 
-JModel::addIncludePath(JPATH_SITE.'/components/com_content/models');
+JModel::addIncludePath(JPATH_SITE.'/components/com_content/models', 'ContentModel');
 
 abstract class modArticlesNewsHelper
 {
